# xapian

./: .appveyor.yml  .travis.yml
xapian-bindings/: configure.ac
xapian-bindings/go/: Makefile.am
xapian-bindings/go/setup/: setup.go
xapian-core/backends/glass/: glass_dbcheck.cc
